# shading-scene-representations

./: .gitignore  LICENSE  README.md  build_renderer.sh  requirements.txt
checkpoints/: README.md
code/: create-dataset-json-files.py  generate-dataset.py  test-renderer.py  train-gqn.py  visualize-attributions.py  visualize-gqn.py
code/GQN/: core.py  generator.py  handlers.py  model.py  representation.py  training.py
code/pytorch_ssim/: __init__.py
code/renderer/: interface.py
code/renderer/data/: wallpaper1.hdr  wallpaper2.hdr  wallpaper3.hdr  wallpaper4.hdr
code/renderer/optix_renderer/: .gitignore  CMakeLists.txt  render.py
code/renderer/optix_renderer/CMake/: FindMDLWrapper.cmake  FindOptiX.cmake  FindSUtilGLUT.cmake  Macros.cmake
code/renderer/optix_renderer/ext/filesystem/: .gitignore  CMakeLists.txt  README.md  path_demo.cpp
code/renderer/optix_renderer/ext/filesystem/filesystem/: fwd.h  path.h  resolver.h
code/renderer/optix_renderer/kernels/: intersect.cu  render.cu
code/renderer/optix_renderer/pybind/: render.cpp
code/renderer/optix_renderer/src/: context.cpp  context.hpp  definitions.h  geometry.cpp  geometry.hpp  json_util.hpp  kernel_util.h  light.h  material.h  programs.cpp  programs.hpp  random.h  sampling.h  scenes.cpp  scenes.hpp  texture.cpp  texture.hpp  util.hpp
code/renderer/randomize/: camera.py  material.py  object.py  scene_randomizer.py
code/util/: attribution.py  config.py  datasets.py  settings.py
configs/: archviz_beauty.json  archviz_beauty_gqn_buffers.json  archviz_beauty_unet.json  room_beauty.json  room_beauty_gqn_buffers.json  room_beauty_unet.json  save_archviz.json  save_room.json
datasets/: README.md
ext/: README.md
